# dodo-email-sender

./: .env-template  README.md  config.py  email_sender.py  install-DEPRECATED.sh  install.sh  logger.py  main.py  pyproject.toml  test_send_email.sh
